--- a/curriculum.html
+++ b/curriculum.html
@@ -63,7 +63,7 @@
 
                 <div class="grid gap-6">
                     <div class="bg-white rounded-2xl p-6 shadow-sm border border-slate-100 chapter-card color-basic">
-                        <h3 class="text-xl font-bold mb-4">CH1 物質的組成 <span class="text-slate-300 font-normal ml-2">P.2</span></h3>
+                        <h3 class="text-xl font-bold mb-4">CH1 物質的組成 </h3>
                         <div class="grid md:grid-cols-2 gap-4 text-sm text-slate-600">
                             <p>1-1 物質的分類與分離</p>
                             <p>1-2 道耳頓的原子說</p>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-2xl p-6 shadow-sm border border-slate-100 chapter-card color-basic">
-                        <h3 class="text-xl font-bold mb-4">CH2 物質的構造與反應 <span class="text-slate-300 font-normal ml-2">P.56</span></h3>
+                        <h3 class="text-xl font-bold mb-4">CH2 物質的構造與反應 </h3>
                         <div class="grid md:grid-cols-2 gap-4 text-sm text-slate-600">
                             <p class="font-bold text-pink-600 italic">2-1 化學鍵 (重點)</p>
                             <p>2-2 化學式</p>
@@ -80,7 +80,17 @@
                             <p>2-4 化學反應熱</p>
                         </div>
                     </div>
+                    <div class="bg-white rounded-2xl p-6 shadow-sm border border-slate-100 chapter-card color-basic">
+                        <h3 class="text-xl font-bold mb-4">CH3 物質的構造與反應 </h3>
+                        <div class="grid md:grid-cols-2 gap-4 text-sm text-slate-600">
+                            <p>3-1 溶液的種類與特性 </p>
+                            <p>3-2 水溶液的濃度 </p>
+                            <p>3-3 溶解度 </p>
+                            <p class="font-bold text-pink-600 italic">3-4 水溶液中的酸鹼反應 (重點)</p>
+                            <p class="font-bold text-pink-600 italic">3-5 氧化還原反應 (重點)</p>
+                        </div>
                     </div>
+                </div>
             </section>
 
             <section id="elective1" class="scroll-section">
