--- a/curriculum.html
+++ b/curriculum.html
@@ -90,6 +90,15 @@
                             <p class="font-bold text-pink-600 italic">3-5 氧化還原反應 (重點)</p>
                         </div>
                     </div>
+                    <div class="bg-white rounded-2xl p-6 shadow-sm border border-slate-100 chapter-card color-basic">
+                        <h3 class="text-xl font-bold mb-4">CH4 生活中的化學 </h3>
+                        <div class="grid md:grid-cols-2 gap-4 text-sm text-slate-600">
+                            <p>4-1 生物體分子 </p>
+                            <p>4-2 藥物與界面活性劑 </p>
+                            <p>4-3 環境與化學 </p>
+                            <p>4-4 化學的現代應用</p>                            
+                        </div>
+                    </div>
                 </div>
             </section>
 
