--- a/curriculum.html
+++ b/curriculum.html
@@ -93,10 +93,10 @@
                     <div class="bg-white rounded-2xl p-6 shadow-sm border border-slate-100 chapter-card color-basic">
                         <h3 class="text-xl font-bold mb-4">CH4 生活中的化學 </h3>
                         <div class="grid md:grid-cols-2 gap-4 text-sm text-slate-600">
-                            <p>4-1 生物體分子 </p>
+                            <p>4-1 生物化學 </p>
                             <p>4-2 藥物與界面活性劑 </p>
-                            <p>4-3 環境與化學 </p>
-                            <p>4-4 化學的現代應用</p>                            
+                            <p>4-3 環境化學 </p>
+                            <p>4-4 現代化學</p>                            
                         </div>
                     </div>
                 </div>
