--- a/curriculum.html
+++ b/curriculum.html
@@ -107,9 +107,34 @@
                     <div class="h-10 w-2 bg-orange-500 rounded-full"></div>
                     <h2 class="text-3xl font-black text-slate-800">選修化學 I：物質與能量</h2>
                 </div>
-                <div class="bg-white rounded-3xl p-10 border border-dashed border-slate-300 text-center">
-                    <i class="fas fa-tools text-4xl text-slate-200 mb-4"></i>
-                    <p class="text-slate-400 italic">選修一教材開發中：包含物質特性、氣體定律、溶液性質</p>
+                <div class="grid gap-6">
+                    <div class="bg-white rounded-2xl p-6 shadow-sm border border-slate-100 chapter-card color-basic">
+                        <h3 class="text-xl font-bold mb-4">CH1 物質鑑定與化學反應 </h3>
+                        <div class="grid md:grid-cols-2 gap-4 text-sm text-slate-600">
+                            <p>1-1 物質的特性與鑑定</p>
+                            <p>1-2 反應式的平衡</p>
+                            <p class="font-bold text-pink-600 italic">1-3 化學計量 (重點)</p>
+                            <p class="font-bold text-pink-600 italic">1-4 反應熱的種類與性質 (重點)</p>
+                        </div>
+                    </div>
+                    <div class="bg-white rounded-2xl p-6 shadow-sm border border-slate-100 chapter-card color-basic">
+                        <h3 class="text-xl font-bold mb-4">CH2 氣體 </h3>
+                        <div class="grid md:grid-cols-2 gap-4 text-sm text-slate-600">
+                            <p>2-1 氣體的性質</p>
+                            <p class="font-bold text-pink-600 italic">2-2 氣體定律 (重點)</p>
+                            <p class="font-bold text-pink-600 italic">2-3 理想氣體方程式 (重點)</p>
+                            <p>2-4 氣體分壓</p>
+                        </div>
+                    </div>
+                    <div class="bg-white rounded-2xl p-6 shadow-sm border border-slate-100 chapter-card color-basic">
+                        <h3 class="text-xl font-bold mb-4">CH3 溶液 </h3>
+                        <div class="grid md:grid-cols-2 gap-4 text-sm text-slate-600">
+                            <p>3-1 水的性質</p>
+                            <p class="font-bold text-pink-600 italic">3-2 溶液的蒸氣壓 (重點)</p>
+                            <p class="font-bold text-pink-600 italic">3-3 拉午耳定律 (重點)</p>
+                            <p >3-4 溶液的性質</p>
+                        </div>
+                    </div>
                 </div>
             </section>
 
